[gd_scene load_steps=7 format=3 uid="uid://cnixd8u25fpq"]

[ext_resource type="Script" path="res://Menu&Options/Scripts/MainMenuScript.gd" id="1_2m7ft"]
[ext_resource type="Texture2D" uid="uid://uj6rt35obi1f" path="res://Menu&Options/Menu&OptionsStuff/image.webp" id="2_f1xy2"]
[ext_resource type="Texture2D" uid="uid://c3ixi8esnjgp2" path="res://Menu&Options/Menu&OptionsStuff/pixil-frame-0.png" id="3_yavvb"]
[ext_resource type="Texture2D" uid="uid://c8v6eesud84mr" path="res://Menu&Options/Menu&OptionsStuff/pixil-frame-1.png" id="4_q7gff"]
[ext_resource type="FontFile" uid="uid://4wlklq27jura" path="res://Menu&Options/Fonts/SuperPixel-m2L8j.ttf" id="5_ko8nu"]
[ext_resource type="PackedScene" uid="uid://bpnhq8inb4uqt" path="res://Menu&Options/Scenes/OptionMenu.tscn" id="6_cumf5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2m7ft")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_f1xy2")

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
offset_left = 192.0
offset_top = 248.0
offset_right = 432.0
offset_bottom = 351.0
scale = Vector2(1.56416, 1.54664)
texture_normal = ExtResource("3_yavvb")
texture_pressed = ExtResource("4_q7gff")
stretch_mode = 0

[node name="Label" type="Label" parent="Buttons/StartButton"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("5_ko8nu")
theme_override_font_sizes/font_size = 27
text = "START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="TextureButton" parent="Buttons"]
visible = false
layout_mode = 2
offset_left = 192.0
offset_top = 440.0
offset_right = 432.0
offset_bottom = 543.0
scale = Vector2(1.56416, 1.54664)
texture_normal = ExtResource("3_yavvb")
texture_pressed = ExtResource("4_q7gff")
stretch_mode = 0

[node name="Label" type="Label" parent="Buttons/OptionsButton"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("5_ko8nu")
theme_override_font_sizes/font_size = 27
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="TextureButton" parent="Buttons"]
layout_mode = 2
offset_left = 192.0
offset_top = 632.0
offset_right = 432.0
offset_bottom = 735.0
scale = Vector2(1.56416, 1.54664)
texture_normal = ExtResource("3_yavvb")
texture_pressed = ExtResource("4_q7gff")
stretch_mode = 0

[node name="Label" type="Label" parent="Buttons/ExitButton"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("5_ko8nu")
theme_override_font_sizes/font_size = 27
text = "Exit
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleHolder" type="MarginContainer" parent="Buttons"]
layout_mode = 2
offset_left = -56.0
offset_top = 56.0
offset_right = 862.0
offset_bottom = 127.0
scale = Vector2(1.03846, 2.11991)

[node name="TitleLabel" type="Label" parent="Buttons/TitleHolder"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.749087, 0.427379, 0.301326, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("5_ko8nu")
theme_override_font_sizes/font_size = 60
text = "Potion Commotion"

[node name="Options_Menu" parent="." instance=ExtResource("6_cumf5")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -56.0
offset_top = 56.0
offset_right = 862.0
offset_bottom = 127.0
